--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 __pycache__/
 .idea/
-.ipynb.*/
-csv/
+.ipynb_checkpoints/
+csv/*
 !csv/.gitkeep
-evaluation/
+evaluation/*
 !evaluation/.gitkeep
-graphs/
+graphs/*
 !graphs/.gitkeep
-ngrams/
+ngrams/*
 !ngrams/.gitkeep
 parsing_result/
 !parsing_result/.gitkeep
-.*.zip
+*.zip
 todo
-.*.ipynb
+*.ipynb
